--- a/k8-manifests/dev/api-server.yaml
+++ b/k8-manifests/dev/api-server.yaml
@@ -28,9 +28,21 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
+      securityContext:
+        runAsNonRoot: true
+        runAsGroup: 1000
+        runAsUser: 1000
+        fsGroup: 1000
       containers:
       - name: api-server
         image: api-server
+        securityContext:
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - all
         env:
         - name: INVENTORY_EP
           valueFrom:
