--- a/k8-manifests/dev/inventory.yaml
+++ b/k8-manifests/dev/inventory.yaml
@@ -28,9 +28,21 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
+      securityContext:
+        runAsNonRoot: true
+        runAsGroup: 1000
+        runAsUser: 1000
+        fsGroup: 1000
       containers:
       - name: inventory
         image: inventory
+        securityContext:
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - all
         env:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
