--- a/k8-manifests/release/payments.yaml
+++ b/k8-manifests/release/payments.yaml
@@ -28,10 +28,21 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
+      securityContext:
+        runAsNonRoot: true
+        runAsGroup: 1000
+        runAsUser: 1000
+        fsGroup: 1000
       containers:
       - name: payments
-        # TODO:: remove the snapshot tag once we make the first release
         image: us-docker.pkg.dev/point-of-sale-ci/pos-images/payments:v0.1.0
+        securityContext:
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - all
         env:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
